# vulkan_sprite_renderer

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  compile_shaders.sh  sourcelist.cmake  update_file_list.sh  win_compile_shaders.bat
include/: io.h
include/vkx/: vkx.h  vkx_core.h  vkx_init.h  vkx_pipeline.h  vkx_swap_chain.h  vkx_sync.h
shaders/: screen.frag  screen.vert  sprite.frag  sprite.vert  tiles.frag  tiles.vert
src/: io.c  main.c
src/vkx/: vkx_core.c  vkx_init.c  vkx_pipeline.c  vkx_swap_chain.c  vkx_sync.c
win/include/SDL3/: SDL_revision.h
win/lib/: SDL3.lib
